[package]
name = "pamos-pub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pub"
path = "src/main.rs"
test = false
doctest = false
bench = false

[lib]
name = "lib"
path = "src/lib/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uefi_macros = { path = "uefi_macros" }
